dev/operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easy-deploy-operator
  namespace: easy-deploy-system
  labels:
    app.kubernetes.io/name: easy-deploy-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: easy-deploy-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: easy-deploy-operator
    spec:
      serviceAccountName: easy-deploy-operator
      containers:
        - name: manager
          image: ghcr.io/murad-suleymanov/easy-deploy-operator:main
          imagePullPolicy: Always
          args:
            - "--metrics-bind-address=:8080"
            - "--health-probe-bind-address=:8081"
          ports:
            - name: metrics
              containerPort: 8080
            - name: health
              containerPort: 8081
            - name: webhook
              containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: health
          readinessProbe:
            httpGet:
              path: /readyz
              port: health
